crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__sorting__select_order_by_artist_album_count.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      }
    ]
  }
]
