crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__sorting__select_order_by_artist_name.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Worlds"
      },
      {
        "Name": "The World of Classical Favourites"
      },
      {
        "Name": "Sir Neville Marriner: A Celebration"
      },
      {
        "Name": "Fauré: Requiem, Ravel: Pavane & Others"
      },
      {
        "Name": "Bach: Orchestral Suites Nos. 1 - 4"
      }
    ]
  }
]
