crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__sorting__select_track_order_by_artist_id_and_album_title.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Breaking The Rules"
      },
      {
        "Name": "C.O.D."
      },
      {
        "Name": "Evil Walks"
      },
      {
        "Name": "For Those About To Rock (We Salute You)"
      },
      {
        "Name": "Inject The Venom"
      }
    ]
  }
]
